--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,5 +14,7 @@ services:
             - PREFIX=OPTIONAL_WEB_UI_PATH_PREFIX # optional - path prefix for the integrated web ui
             - USER=OPTIONAL_WEB_UI_USERNAME # optional - user name for the integrated web ui (requires PASS to be set)
             - PASS=OPTIONAL_WEB_UI_PASSWORD # optional - password for the integrated web ui (requires USER to be set)
+            - UID=1000 #Used to set the user ID you want to use as owner of the final files
+            - GID=1000 #Used to set the group ID you want to use as owners of the final files
         privileged: true # optional - only use when your drive is not detected inside the container
         image: rix1337/docker-ripper:manual-latest
